<resources>

    <string name="app_name">Science Resultado</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_quiz_result">Quiz Result</string>

    <!-- STRING UTIL -->
    <string name="debug_key">sciencecidebugkey</string>
    <string name="latitude">-8.273965</string>
    <string name="longitude">-35.965900</string>
    <!-- END STRING UTIL -->

    <!-- BUTTON STRINGS -->
    <string name="button_login">Login</string>
    <string name="button_answer">Answer</string>
    <string name="button_next_question">Next Question</string>
    <string name="button_finish_quiz">Finish Quiz</string>
    <string name="button_back_home">BACK TO HOME</string>
    <string name="button_update">Update</string>
    <!-- END BUTTON STRINGS -->

    <!-- TEXTVIEW STRINGS -->
    <string name="text_view_recovery_password">Forgot your password?</string>
    <string name="text_view_no_quiz_avaiable">No quiz avaiable at this time</string>
    <string name="text_view_question_timer">Timer</string>
    <string name="text_view_question_points">Points</string>
    <string name="text_view_you_earned">YOU EARNED</string>
    <string name="text_view_you_earned_points">+ POINTS</string>
    <string name="text_view_contact">Contact</string>
    <string name="text_view_email">Email:</string>
    <string name="text_view_email_address">tech@scienceresultado.com</string>
    <string name="text_view_phone_number">(81) 3136&#8211;7368</string>
    <string name="text_view_navigate_on_maps">Navigate on Google Maps</string>
    <string name="text_view_choose_email">Choose an email client:</string>
    <string name="text_view_rule_one">1. The objective of SCIENCE CHALLENGE is to help students to train the resolution of issues in a competitive and dynamic.</string>
    <string name="text_view_rule_two">2. When creating your account and participate in the resolution of issues you agree to participate in the public disclosure of the Ranking.</string>
    <string name="text_view_rule_three">3. If you prefer, you can put a nickname instead of your real name and a photo that does not identify you.</string>
    <string name="text_view_rule_four">4. To participate, you must be properly enrolled in preparatory for TJ Science.</string>
    <string name="text_view_rule_five">5. The competition starts on August 17 and lasts 50 days. It is comprised of students from TJ Regular, TJ Intensive  and Coaching.</string>
    <string name="text_view_rule_six">6. Every day will be sent 10 multiple choice questions with timer, with set time due to the difficulty. The student must answer daily questions to get a good position in the Ranking.</string>
    <string name="text_view_rule_seven">7. Ranking is updated every day and is structured according to the number of correct answers students.</string>
    <string name="text_view_rule_eight">8. Ranking will be published on the Science site during the lessons and on the Facebook page.</string>
    <string name="text_view_rule_nine">9. The award will be announced before the start of the competition on the Facebook page.</string>
    <string name="text_view_rule_ten">10. In case of a tie for first place, there will be an competition among those tied. The winner will receive the prize.</string>
    <string name="text_view_rule_eleven">11. If you exit the application while resolving issues you automatically lose the score of the questions that day.</string>
    <string name="text_view_rule_twelve">12. You received medals (bronze, silver, gold) throughout the competition and every medal has four levels (I, II, III, IV) that evolve depending on the number of correct answers.</string>
    <string name="text_view_rule_thirteen">13. The first place in the ranking will receive the Medal of the Crown</string>
    <string name="text_view_tech_problem">Tech Problems? Contact us!</string>
    <string name="text_view_science_contact">Contact Science Resultado</string>
    <string name="text_view_choose_alternative">ALTERNATIVE CHOSEN:</string>
    <string name="text_view_correct_alternative">CORRECT ALTERNATIVE:</string>

    <!-- END TEXTVIEW STRINGS -->

    <!-- HINT STRINGS -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_view_quiz_contest">Contest</string>
    <!-- END HINT STRINGS -->

    <!-- MENU DRAWER STRINGS -->
    <string name="drawer_menu_quiz">Quiz</string>
    <string name="drawer_menu_profile">My Profile</string>
    <string name="drawer_menu_rules">Rules</string>
    <string name="drawer_menu_ranking">Ranking</string>
    <string name="drawer_menu_contact">Contact</string>
    <string name="drawer_menu_logout">Logout</string>
    <!-- END MENU DRAWER STRINGS -->

    <!-- ERROR STRINGS -->
    <string name="error_invalid_login">Invalid Login! Try again</string>
    <string name="error_empty_fields">Required fields are empty! Try again</string>
    <string name="error_empty_field_email">Email is required</string>
    <string name="error_network_processing">Error during the network process. Try again!</string>
    <string name="error_no_alternative_selected">Select an alternative, at least.</string>
    <string name="error_recovery_password">We did not find an account with the given email</string>
    <!-- END ERROR STRINGS -->

    <!-- WARNING STRINGS -->
    <string name="warning_exit">You cannot leave yet!</string>
    <!-- END ERROR STRINGS -->

    <!-- END SUCCESS STRINGS -->
    <string name="success_quiz_result">Your results are safe now! :D</string>
    <string name="success_recovery_password">A new password has been sent to the email address you entered</string>
    <!-- END SUCCESS STRINGS -->

    <!-- STRINGS DIALOG FRAGMENT -->
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Do you really want to logout? :(</string>
    <string name="logout_dialog_positive_button">Yes</string>
    <string name="logout_dialog_negative_button">No way!</string>
    <string name="correct_alternative_dialog_ok">OK</string>
    <!-- END STRINGS DIALOG FRAGMENT -->

    <!-- FAKE STRINGS -->
    <string name="fake_student_name">Lisa Rose Snow</string>
    <!-- END FAKE STRINGS -->
</resources>
